--- a/Time.Project.Manager/ShellView.xaml
+++ b/Time.Project.Manager/ShellView.xaml
@@ -1,12 +1,121 @@
 <Window x:Class="Time.Project.Manager.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        Title="HyperGear - Project Manager" Height="640" Width="1156">
 
-    <Grid Background="White" RenderTransformOrigin="0.509,0.117">
-        <TextBlock Text="Gear - Project Manager"
-                   VerticalAlignment="Center"
+    <Window.Resources>
+        <sys:String x:Key="prompt">How are you today, sir?</sys:String>
+        
+    </Window.Resources>
+    <DockPanel Background="Black" RenderTransformOrigin="0.509,0.117">
+        <TextBlock Text="HyperGear - Project Manager"
+                   Foreground="AntiqueWhite"
+                   VerticalAlignment="Top"
                    HorizontalAlignment="Center"
-                   FontSize="20" Margin="281,10,241,468" RenderTransformOrigin="0.522,-3.687" Width="238" />
-    </Grid>
+                   FontSize="20"
+                   Height="70"
+                   DockPanel.Dock="Top"/>
+      
+          
+        <Grid DockPanel.Dock="Right" >
+            <Grid.Margin>20,20,20,20</Grid.Margin>
+            
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+            
+            
+            <Button 
+                BorderBrush="Black"               
+                Grid.Column="0"
+                Grid.Row="0"
+                Content="Manage" 
+                FontFamily="Calibri"
+                FontSize="18"
+                x:Name="butManage" 
+                Background="DodgerBlue"
+                Width="100"
+                Height="100"
+                Margin="10,10,10,10"/>
+            <Button 
+                Grid.Column="1"
+                Grid.Row="0"
+                BorderBrush="Black"
+                Content="Select" 
+                FontFamily="Calibri"
+                FontSize="18"
+                x:Name="butSelect" 
+                Background="LimeGreen"
+                Width="100"
+                Height="100"
+                Margin="10,10,10,10"/>
+
+            <Button 
+                Grid.Column="0"
+                Grid.Row="1"
+                BorderBrush="Black"
+                Content="New Project" 
+                FontFamily="Calibri"
+                FontSize="16"
+                x:Name="butNewProject" 
+                Background="Orange"
+                Width="100"
+                Height="100"
+                Margin="10,10,10,10"/>
+
+            <Button 
+                Grid.Column="1"
+                Grid.Row="1"
+                BorderBrush="Black"
+                Content="Statistics" 
+                FontFamily="Calibri"
+                FontSize="16"
+                x:Name="butStats" 
+                Background="Orange"
+                Width="100"
+                Height="100"
+                Margin="10,10,10,10"/>
+
+            <Button 
+                Grid.Column="1"
+                Grid.Row="3"
+                BorderBrush="Black"
+                Content="Hide" 
+                FontFamily="Calibri"
+                FontSize="16"
+                x:Name="butHide" 
+                Background="Gray"
+                Width="100"
+                Height="100"
+                Margin="10,10,10,10"/>
+        </Grid>
+        <StackPanel DockPanel.Dock="Left">
+            <TextBlock Text="Side Panel" Foreground="White" FontSize="20" Width="200"/>
+
+        </StackPanel>
+        <StackPanel DockPanel.Dock="Bottom">
+            <TextBox Name="commandline" Width="500" Height="60"  Foreground="White" Background="Black" TextWrapping="Wrap"/>
+        </StackPanel>
+        <StackPanel Margin="0,200,0,0">
+            <Border BorderThickness="1" BorderBrush="White">
+                <TextBlock Text="{StaticResource prompt}" Foreground="White" FontSize="20"  HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="0,200,0,0"/>
+            </Border>
+        </StackPanel>
+        
+        
+    </DockPanel>
+
+
 
 </Window>
