--- a/Time.Project.Manager/ShellView.xaml
+++ b/Time.Project.Manager/ShellView.xaml
@@ -6,9 +6,9 @@
         Title="HyperGear - Project Manager" Height="640" Width="1156">
 
     <Window.Resources>
-        <sys:String x:Key="prompt">How are you today, sir?</sys:String>
-        
+        <sys:String x:Key="prompt_string">How are you today, sir?</sys:String>
     </Window.Resources>
+
     <DockPanel Background="Black" RenderTransformOrigin="0.509,0.117">
         <TextBlock Text="HyperGear - Project Manager"
                    Foreground="AntiqueWhite"
@@ -17,25 +17,25 @@
                    FontSize="20"
                    Height="70"
                    DockPanel.Dock="Top"/>
-      
-          
+
+
         <Grid DockPanel.Dock="Right" >
             <Grid.Margin>20,20,20,20</Grid.Margin>
-            
+            <Grid.Width>250</Grid.Width>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
+
             </Grid.ColumnDefinitions>
-            
+
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
-            
-            
+
+
             <Button 
                 BorderBrush="Black"               
                 Grid.Column="0"
@@ -100,20 +100,26 @@
                 Height="100"
                 Margin="10,10,10,10"/>
         </Grid>
-        <StackPanel DockPanel.Dock="Left">
-            <TextBlock Text="Side Panel" Foreground="White" FontSize="20" Width="200"/>
-
+        <StackPanel DockPanel.Dock="Left" Width="250">
+            <TextBlock Text="ACTIVE PROJECT" Foreground="Wheat" HorizontalAlignment="Center" FontWeight="Bold" TextAlignment="Center" FontSize="20" Width="200"/>
+            <TextBlock Name="actProj_name" Text="Name" Foreground="White" HorizontalAlignment="Center"  TextAlignment="Center" FontSize="20" Width="200"/>
+            <TextBlock Name="actProj_type" Text="type" Foreground="Gray" HorizontalAlignment="Center"  TextAlignment="Center" FontSize="16" Width="200"/>
+            
+            <TextBlock Name="actProj_timer" Text="00:00" Foreground="White" HorizontalAlignment="Center"  TextAlignment="Center" FontSize="40" Width="200" Margin="0,50,0,0"/>
+            <Button Name="actProj_timer_button"
+                    Width="150" Height="80" FontFamily="Calibri" Background="DarkSlateBlue" FontSize="18" Content="Start" />
         </StackPanel>
         <StackPanel DockPanel.Dock="Bottom">
-            <TextBox Name="commandline" Width="500" Height="60"  Foreground="White" Background="Black" TextWrapping="Wrap"/>
+            <TextBox Name="commandline"  Width="500" Height="60" FontSize="14" Foreground="DodgerBlue" Background="Black" TextWrapping="Wrap"
+                     KeyUp="Prompt_Text_Event" />
         </StackPanel>
         <StackPanel Margin="0,200,0,0">
-            <Border BorderThickness="1" BorderBrush="White">
-                <TextBlock Text="{StaticResource prompt}" Foreground="White" FontSize="20"  HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="0,200,0,0"/>
+            <Border BorderThickness="1" BorderBrush="White" Height="250" MaxWidth="500">
+                <TextBlock Name ="prompt" Text="{StaticResource prompt_string}" Foreground="White" FontSize="18"  HorizontalAlignment="Left"   VerticalAlignment="Bottom" Height="249" Width="500" Margin="0,-1,0,0"/>
             </Border>
         </StackPanel>
-        
-        
+
+
     </DockPanel>
 
 
