--- a/Time.Project.Manager/SelectProjectView.xaml
+++ b/Time.Project.Manager/SelectProjectView.xaml
@@ -11,34 +11,49 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
        
-        <StackPanel Grid.Column="0">
+        <StackPanel Grid.Column="0" Margin="50,0,0,0">
 
             <TextBlock Text="Find existing project..." Foreground="White" FontFamily="Calibri" FontSize="16" HorizontalAlignment="Center" Margin="-5,20,0,0" />
             <TextBox Name="findProj_Label" TextChanged="FinderConstraint"  Background="LightGray" Width="150" Margin="0,0,0,0" FontFamily="Calibri"/>
-            <ListBox Name="findProj_Finder"  Background="LightGray" Width="150" FontFamily="Calibri" Margin="0,15,0,0" Height="150" Foreground="Black"  FontSize="14"/>
+            <ListBox Name="findProj_Finder"  Background="LightGray" Width="200" FontFamily="Calibri" Margin="0,15,0,0" Height="200" Foreground="Black"  FontSize="14"/>
         
         </StackPanel>
         
-        <StackPanel Grid.Column="1">
+        <StackPanel Grid.Column="1" Margin="0,0,50,0">
             <TextBlock Text="Favourites" Foreground="White" FontFamily="Calibri" FontSize="16" HorizontalAlignment="Left" Margin="88,20,0,0" />
             <TextBox Name="findProj_fav" Background="LightGray" Width="150" FontFamily="Calibri" Margin="0,0,0,0" Height="75" IsReadOnly="True"/>
 
             <TextBlock Text="Recent" Foreground="White" FontFamily="Calibri" FontSize="16" HorizontalAlignment="Left" Margin="88,7,0,0" />
             <TextBox Name="findProj_recent" Background="LightGray" Width="150" FontFamily="Calibri" Margin="0,0,0,0" Height="75" IsReadOnly="True"/>
-            <Button 
-                Click="btnSelect"
-                BorderBrush="Black"               
-                FontFamily="Calibri"
-                FontSize="18"
-                x:Name="butManage" 
-                Background="LimeGreen"
-                Width="100"
-                Height="40"
-                Margin="10,10,10,10">
-                <StackPanel>
-                    <Image Source="assets/settings.png" Width="30"/>
-                </StackPanel>
-            </Button>
+            <StackPanel Orientation="Horizontal" Width="150">
+                <Button 
+                    Click="btnSelect"
+                    BorderBrush="Black"               
+                    FontFamily="Calibri"
+                    FontSize="18"
+                    x:Name="butManage" 
+                    Background="LimeGreen"
+                    Width="100"
+                    Height="40"
+                    Margin="0,5,0,0">
+                    <StackPanel>
+                        <Image Source="assets/accept.png" Width="30"/>
+                    </StackPanel>
+                </Button>
+                <Button 
+                    BorderBrush="Black"               
+                    FontFamily="Calibri"
+                    FontSize="18"
+                    x:Name="butFav" 
+                    Background="Pink"
+                    Width="40"
+                    Height="40"
+                    Margin="10,5,0,0">
+                    <StackPanel>
+                        <Image Source="assets/favourite.png" Width="20"/>
+                    </StackPanel>
+                </Button>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </UserControl>
